--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Mac Builders</title>
+  <title>Mac Builders and Developer</title>
 </head>
 
 <body class="body">
